# Hasher

./: CMakeLists.txt  Makefile  Makefile.am  Pipfile  README.md  build.py  build.sh  common.cc  common.h  configure.ac  file.cc  file.h  file_hash.cc  file_hash.h  hasher.cc  main.cc  platform.cc  platform.h  utils.cc  utils.h  xattr.cc  xattr.h
